MB-46090: Use milliseconds in dirtyQueueAge accumulation

MB showed that the use of microseconds in dirtyQueueAge and
it is not impossible to generate an overflow.

Switch to milliseconds and we should be able to accumulate
many more item 'ages' in the stat (1,000 x more) and work
better on systems with longer uptimes.

Change-Id: I30991d93bc29070e370d06ba1d30e5e4e09f783f
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/152906
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>